Self review fixes